--- a/package.json
+++ b/package.json
@@ -19,9 +19,16 @@
     "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.6",
     "koa": "^2.5.2",
+    "koa-bodyparser": "^4.2.1",
     "koa-generic-session": "^2.0.1",
+    "koa-json": "^2.0.2",
+    "koa-passport": "^4.1.3",
     "koa-redis": "^4.0.0",
-    "nuxt": "^2.0.0"
+    "koa-router": "^7.4.0",
+    "mongoose": "^5.6.0",
+    "nodemailer": "^6.2.1",
+    "nuxt": "^2.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
